err/idlespork.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/idlespork-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/idlesporklib'...
Compiling './lib/python3.5/site-packages/idlesporklib/ColorDelegator.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/ColorDelegator.py", line 91
    if DEBUG: print 'tagdefs',self.tagdefs
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/idlesporklib/Commands.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/Commands.py", line 117
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/EditorWindow.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/EditorWindow.py", line 55
    raise ImportError, 'No source for module ' + module.__name__
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/ExpressionEvaluate.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/ExpressionEvaluate.py", line 88
    def updatetip(self, (expression, start, end, calltip)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/FileList.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/FileList.py", line 57
    print "Don't know this EditorWindow object.  (close)"
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/IOBinding.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/IOBinding.py", line 142
    raise LookupError, "Unknown encoding "+name
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idlesporklib/Icons'...
Compiling './lib/python3.5/site-packages/idlesporklib/IdlePrehistory.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/IdlePrehistory.py", line 31
    print 'Unable to load prehistory.'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/idlesporklib/MultiCall.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/MultiCall.py", line 415
    print seq
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/idlesporklib/Percolator.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/Percolator.py", line 63
    print self.name, ": insert", args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/idlesporklib/PyShell.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/PyShell.py", line 769
    exec code in self.locals
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/idlesporklib/RemoteDebugger.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/RemoteDebugger.py", line 207
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/ScrolledList.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/ScrolledList.py", line 136
    def on_select(self, index): print "select", self.get(index)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/TreeWidget.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/TreeWidget.py", line 37
    raise RuntimeError, "can't find icon directory (%r)" % (ICONDIR,)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/UndoDelegator.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/UndoDelegator.py", line 42
    print "pointer:", self.pointer,
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/idlesporklib/WindowList.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/WindowList.py", line 49
    print "warning: callback failed in WindowList", \
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idlesporklib/licenses'...
Compiling './lib/python3.5/site-packages/idlesporklib/rpc.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/rpc.py", line 262
    raise RuntimeError, what
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/idlesporklib/run.py'...
***   File "./lib/python3.5/site-packages/idlesporklib/run.py", line 206
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
